[tool.poetry]
name = "selene-intro"
version = "0.1.0"
description = ""
authors = ["Pavel Volkov <pvolkov@live.ru>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
selene = {version = "^2.*", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
